fixed  banner image distorting

--- a/client/src/style/dashboard/dashboard.scss
+++ b/client/src/style/dashboard/dashboard.scss
@@ -111,11 +111,24 @@
   padding: 4px 8px;
   cursor: pointer;
   height: 100%;
-  display: inline-flex;
+  display: grid;
   box-sizing: border-box;
 }
 
 .checked {
   height: 300px;
   background: $warn-0;
+}
+
+@media only screen and (max-width: 1100px) {
+  .banner-option-container {
+    grid-gap: 0.5rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .banner-option-container {
+    grid-gap: 2px;
+    grid-template-columns: 1fr;
+  }
 }
